# caravel-soc_fpga-lab

./: README.md
caravel-soc-ppt/: README.md
catapult_hls/: README.md  catapult_FPGA_edge_detect.pptx  catapult_setup(NTHU).pptx  crc32.cpp  lab_catapult_workbook.pptx
fsic-fpga/: README.md
fsic-sim/: README.md  lab1-fsic-sim-workbook.pptx
fsic-sim/fsic_fpga/: README.md
fsic-sim/fsic_fpga/firmware/: caravel.h
fsic-sim/fsic_fpga/fsic-spec-dev/: README.md
fsic-sim/fsic_fpga/vip/: spiflash.v  tbuart.v
fsic-sim/fsic_fpga/vivado/: fsic.coe  fsic_defines.v  fsic_tb.sv  fsic_tb_behav.wcfg  open_wave  open_wave.tcl  run_vivado_fsic  run_vivado_fsic_sim  vvd_caravel_fpga_10mhz.tcl  vvd_caravel_fpga_1mhz.tcl  vvd_caravel_fpga_fsic.tcl  vvd_caravel_fpga_fsic_sim.tcl
fsic-sim/reference_FIR/: README.md
lab-caravel_fir/: README.md
lab-caravel_fir/rtl/user/: bram11.v  bram12.v  bram32.v
lab-caravel_fir/testbench/counter_la_fir/: counter_la_fir.c  counter_la_fir_tb.v  fir.c  fir.h
lab-exmem/: README.md
lab-exmem/firmware/: adder.h  sections.lds
lab-exmem/rtl/user/: bram.v  user_proj_example.counter.v
lab-exmem/testbench/counter_la/: include.rtl.list
lab-exmem_fir/rtl/user/: bram.v  user_proj_example.counter.v
lab-exmem_fir/vivado/: vvd_caravel_fpga_10mhz.tcl
lab-fir/: Fir_intro_testbench.pptx  README.md  SYN_Workflow.pptx  Submission_Caravel SOC User Project (FIR).pptx  lab3-fir-workbook-1-20.pptx  lab3-fir-workbook-7-18.pptx  lab3-fir-workbook.pptx
lab-fir/bram/: bram.v  bram11.v  bram12.v  bram_1B.v
lab-fir/fir/: include.rtl.list.xsim
lab-fir/py/: fir.py
lab-interrupt/: Add-user-project-irq0-test-related-co.patch  README.md
lab-interrupt/firmware/: crt0_vex.S  isr.c
lab-interrupt/vip/: bram.v
lab-sdram/: README.md
lab-sdram/sdram/: README.md
lab-uart/: README.md
lab-uart/counter_la_uart/: counter_la.c  counter_la_tb.v  run_xsim
lab-uart/lab-uart_updated/: README.md
lab-uart/release/: counter_la_uart.hex
lab-uart/vivado/: vivado.jou  vvd_caravel_fpga_10mhz.tcl
lab-wlos_baseline/: README.md  exmem_pipeline.v
lab-wlos_baseline/firmware/: crt0_vex.S  isr.c
lab-wlos_baseline/vivado/: vvd_caravel_fpga_40mhz.tcl
lab1/: README.md  run_main.sh  run_vitis.sh  run_vivado.sh  vivado_project.tcl
lab1-report/: Caravel_FPGA_Labs_Lab1_Allen_20230424.pptx  README.md
lab1-report/src/: read_romcode.cpp
lab1-report/tb/: main.cpp
lab1/jupyter_notebooks_project/: design.bit  design.hwh
lab1/vitis_hls_project/: build_error_resolve.txt  design_1.tcl  run_hls.tcl
lab2/: README.md
lab2/doc/: SPI_Device_Simulation.pptx
lab3/: Caravel FPGA Lab 3 Implement -Axilite.pptx  README.md  run_main.sh  run_vitis.sh  run_vivado.sh  vivado_project.tcl
lab3-report/: README.md  caravel_ps.cpp  mprj_control.v
lab3-report/axi2gpio_python/: axi2gpio.hwh
lab3-report/pynqz2/: axi2gpio.hwh
lab3-report/src/: caravel_ps.cpp  mprj_control.v
lab3/jupyter_notebooks_project/: axi2gpio.bit  axi2gpio.hwh
lab3/vitis_hls_project/: Makefile  run_hls.tcl  settings.tcl
labi/: README.md  run_vitis.sh  run_vivado.sh  vvd_caravel_fpga.tcl  vvd_caravel_fpga_gcd.tcl
labi/doc/: README.pptx
labi/gcd_design/: gcd_la.hex  run_vivado_gcd.sh
labi/jupyter_notebooks_project/: caravel_fpga.ipynb  counter_wb.hex
snps_flow/: README.md
soc-final-project/: README.md
soc-final-project/nthu/: README.md
soc-final-project/ntu/: 7_final_team7.pptx  README.md
soc-final-project/ntu/aahls_sp_2024/ViT-Accelerator/host/: CMakeLists.txt  main.cpp  quantize.cpp  vit.cpp  vit.h
soc-final-project/nycu/: README.md
spiflash/: README.md  spiflash.v  spiflash_tb.v
(+3101 files in other folders)
